[tool.poetry]
name = "dr4dev"
version = "0.1.0"
description = "API em FastApi para gestão dos dados do projeto DR4Dev"
authors = ["Douglas Maciel d'Auriol Souza <44655942+ddauriol@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"
motor = "^2.1.0"
pyyaml = "^5.3.1"
python-dotenv = "^0.14.0"
dnspython = "^1.16.0"
asyncio = "^3.4.3"
aiofiles = "^0.5.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
autopep8 = "^1.5.3"

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
